# think-on-graph-agent

./: .gitignore  PyVis.py  README.md  Text2KG.py  graph.html  main.py  pyproject.toml
.github/workflows/: ci.yml
KGBuilder/: __inti__.py  neo4j_kg.py  networkx_buillder.py  parameters.py  prompts.py
KGBuilder/extractor/: __init__.py  spacy_extractor.py
KGBuilder/extractors/: KGExtractor.py  __init__.py  adv_schema_azure_version.py  azure_openai_extractor.py  azure_version.py  chunking.py  groq_extractor.py  openai_extractor.py  openai_extractor2.py  openai_kg_extractor.py  prompts.py  spacy_extractor.py
chunks_builder/: docling_chunker.py
kg_builder/: pipeline.py
kg_builder/connectors/: neo4j.py
kg_builder/extractors/: advanced.py  allowlist.py  base.py
kg_builder/graph_builders/: networkx_builder.py
knowledge_graph_extractor/: advanced_graph_constructor.py  advanced_kg_extractor.py  graph_extractor.py  kg_extractor.py  neo4j_connector.py  networx.py  pipeline.py
notebooks/: knowledge_graph.ipynb
output/: pdf_knowledge_graph.json
tests/: test_placeholder.py
tog/: __init__.py  config.py  logging_config.py  tog.py
tog/demo/: config.py  data_processing.py  explorer_engine.py  main.py  session_manager.py  ui_components.py
tog/kg/: BaseKG.py  Neo4j.py  Networkx.py  __init__.py  visualization.py
tog/kg/models/: entity.py  relationship.py
tog/llm/: AzureOpenAI.py  BaseLLM.py  GroqAI.py  OpenAI.py  __init__.py  prompts.py  prompts.yaml  utils.py
tog/llms/: azure_openai_llm.py  base_llm.py  groq_llm.py
tog/models/: path.py  relation.py
tog/pipeline/: entity_explorer.py  entity_extractor.py  exploration_loop.py  explorer.py  relation_explorer.py
tog/tests/: test_Networkx.py  test_entitiy_extraction.py  test_llm.py
tog/utils/: json_to_nt.py  visualizer.py  yaml_handler.py
