[tool.poetry]
name = "think-on-graph"
version = "0.1.0"
description = "Implementation of Think of Graph Research Paper"
authors = ["AkhileshMalthi <akhileshmalthi2299@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
spacy = "^3.7.4"
thinc = "8.2.4"  # Ensure compatibility with spacy
numpy = "^1.21.0"  # Ensure compatibility with thinc and spacy
neo4j = "^5.27.0"
networkx = "^3.4.2"
pyvis = "^0.3.2"
openai = "^1.55.3"
python-dotenv = "^1.0.1"
fuzzywuzzy = "^0.18.0"
spacy-transformers = "^1.3.5"
transformers = "4.36.0"
groq = "^0.13.0"
scispacy = "^0.5.1"
en-core-sci-scibert = { url = "https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.4/en_core_sci_scibert-0.5.4.tar.gz" }


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"