[tool.poetry]
name = "think-on-graph"
version = "0.1.0"
description = "Implementation of Think of Graph Research Paper"
authors = ["AkhileshMalthi <akhileshmalthi2299@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
spacy = "^3.8.2"
neo4j = "^5.27.0"
networkx = "^3.4.2"
pyvis = "^0.3.2"
openai = "^1.55.3"
python-dotenv = "^1.0.1"
fuzzywuzzy = "^0.18.0"
langchain-experimental = "^0.3.4"
langchain-openai = "^0.3.27"
docling = "^2.40.0"
python-slugify = "^8.0.1"  # or latest

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
